--- a/tempo.yml
+++ b/tempo.yml
@@ -5,9 +5,9 @@ channels:
   - defaults
   - conda-forge
 dependencies:
-  - python>=3.8
-  - anndata
-  - numpy
+  - python=3.10
+  - anndata=0.9.2
+  - numpy<2.0
   - pandas
   - scanpy>=1.6
   - scikit-image
@@ -18,7 +18,6 @@ dependencies:
   - torchvision
   - tqdm
   - pytorch>=1.9.0
-
 
 
 
